GIA-132 Implement Trainee endpoints